--- a/templates/home.html
+++ b/templates/home.html
@@ -30,15 +30,10 @@
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
             <a class="nav-item nav-link" id="home" href="/">Home</a>
-            <a class="nav-item nav-link" id="discover" href="/Discover">Discover Nfts</a>
+            <a class="nav-item nav-link" id="discover" href="/Discover">Discover Members</a>
           </div>
         </div>
       </nav>
-    <div class="form-group">
-    <form method="post">
-        <input type="text" placeholder="e.g The Orbs by BT" name="variable">
-    </form>
-    </div>
     <script
     src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
