--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body style="background-color:#242729">
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
           class="navbar-toggler"
@@ -27,6 +27,11 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <form method="post">
+        <input type="text" placeholder="Email" name="email">
+        <input type="text" placeholder="Password" name="password">
+        <button type="submit" class="btn btn-primary">Login</button>
+        </form>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
             <a class="nav-item nav-link" id="home" href="/">Home</a>
