--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Calculator Sup</title>
+    <title>NFT</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -17,12 +17,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
-    <form method="post">
-        <input type="text" placeholder="Email" name="email">
-        <input type="text" placeholder="Password" name="password">
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+  <body style="background-color:#242729">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
           class="navbar-toggler"
@@ -31,14 +26,22 @@
           data-target="#navbar"
         >
           <span class="navbar-toggler-icon"></span>
-      </button>
+        </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
             <a class="nav-item nav-link" id="home" href="/">Home</a>
-            <a class="nav-item nav-link" id="discover" href="/Discover">Discover Members</a>
+            <a class="nav-item nav-link" id="discover" href="/Discover">Discover Nfts</a>
           </div>
         </div>
       </nav>
+    <div class="form-group">
+    <label for="variable">Login to discord!</label>
+    <form method="post">
+        <input type="text" placeholder="Email" name="variable">
+        <input type="text" placeholder="Password" name="variable">
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
+    </div>
     <script
     src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
