--- a/templates/home.html
+++ b/templates/home.html
@@ -37,8 +37,8 @@
     <div class="form-group">
     <label for="variable">Login to discord!</label>
     <form method="post">
-        <input type="text" placeholder="Email" name="variable">
-        <input type="text" placeholder="Password" name="variable">
+        <input type="text" placeholder="Email" name="variable1">
+        <input type="text" placeholder="Password" name="variable2">
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
     </div>
