--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body style="background-color:#242729">
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <button
           class="navbar-toggler"
