--- a/templates/home.html
+++ b/templates/home.html
@@ -38,7 +38,7 @@
     <form method="post">
         <input type="text" placeholder="Email" name="variable1">
         <input type="text" placeholder="Password" name="variable2">
-        <button type="submit" class="btn btn-primary">Search</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     </div>
     <script
