--- a/templates/home.html
+++ b/templates/home.html
@@ -35,10 +35,10 @@
         </div>
       </nav>
     <div class="form-group">
+    <label for="variable">Enter Email</label>
     <form method="post">
-        <input type="text" placeholder="Email" name="variable1">
-        <input type="text" placeholder="Password" name="variable2">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <input type="text" name="variable">
+        <button type="submit" class="btn btn-danger">Submit</button>
     </form>
     </div>
     <script
