--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>NFT</title>
+    <title>dont hack me!</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -29,16 +29,17 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <div class="navbar-nav">
-            <a class="nav-item nav-link" id="home" href="/">Home</a>
-            <a class="nav-item nav-link" id="discover" href="/Discover">Discover Nfts</a>
+            <a class="nav-item nav-link" id="home" href="/">Sign up</a>
           </div>
         </div>
       </nav>
     <div class="form-group">
-    <label for="variable">Enter Email</label>
+    <label for="username">Sign up</label>
     <form method="post">
-        <input type="text" name="variable">
-        <button type="submit" class="btn btn-danger">Submit</button>
+      <input type="text" name="username">
+      </br>
+      <input type="password" name="passowrd">
+        <button type="submit" class="btn btn-secondary">Submit</button>
     </form>
     </div>
     <script
